--- a/index.html
+++ b/index.html
@@ -11,63 +11,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio 2.1</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <!--Верхняя линия-->
     <header>
-        <nav class="site-nav">
-            <a class="link current logo" href="./index.html">WebStudio</a>
-            <ul>
+        <nav>
+            <a class="link logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+            <ul class="menu-nav">
                 <li>
-                    <a class="link nav"  href="Студия">Студия</a>
+                    <a class="link" href="./index.html">Студия</a>
                 </li>
                 <li>
-                    <a class="link nav"  href="./portfolio.html">Портфолио</a>
+                    <a class="link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li>
-                    <a class="link nav"  href="Контакты">Контакты</a>
+                    <a class="link" href="Контакты">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
+        <ul class="menu-nav">
             <li >
-                <a href="mailto:info@devstudio.com" class="link contacts" >info@devstudio.com</a>
+                <a class="link contacts" href="mailto:info@devstudio.com" >info@devstudio.com</a>
             </li>
             <li >
-                <a href="tel:+380961111111" class="link contacts" >+38 096 111 11 11</a>
+                <a class="link contacts" href="tel:+380961111111"  >+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-
     <!--Шапка-->
 
     <main>
 
         <section class="main-section">
-            <h1 class="main-title">Эффективные решения <br>для вашего бизнеса</h1>
-            <button class=" button" type="button">Заказать услугу</button>
+            <h1 class="heading">Эффективные решения<br>для вашего бизнеса</h1>
+            <button class="button link" type="button">Заказать услугу</button>
         </section>
 
         <!--Особенности-->
 
-        <section>
+        <section class="features">
             <ul>
-                <li class="features">
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <li>
+                    <h3 class="feature-names">Внимание к деталям</h3>
+                    <p class="feature-def">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="features">
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li >
+                    <h3 class="feature-names">Пунктуальность</h3>
+                    <p class="feature-def">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="features">
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li >
+                    <h3 class="feature-names">Планирование</h3>
+                    <p class="feature-def">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="features">
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li >
+                    <h3 class="feature-names">Современные технологии</h3>
+                    <p class="feature-def">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -75,7 +75,7 @@
         <!--Чем мы занимаемся-->
 
         <section>
-            <h2  class="heading">Чем мы занимаемся</h2>
+            <h2 class="secondary-heading" >Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <img width="370" height="294" src="img/1.jpg" alt="photo">
@@ -91,28 +91,28 @@
 
         <!--Наша Команда-->
 
-        <section>
-            <h2 class="heading">Наша команда</h2>
+        <section class="team-info">
+            <h2 class="secondary-heading">Наша команда</h2>
             <ul class="team">
                 <li>
                     <img width="270" height="260" src="img/4.jpg" alt="Ihor">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-member">Игорь Демьяненко</h3>
+                    <p class="team-occupation"  lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img width="270" height="260" src="img/5.jpg" alt="">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-member">Ольга Репина</h3>
+                    <p class="team-occupation" lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img width="270" height="260" src="img/6.jpg" alt="">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-member">Николай Тарасов</h3>
+                    <p class="team-occupation" lang="en">Marketing</p>
                 </li>
                 <li>
                     <img width="270" height="260" src="img/7.jpg" alt="">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-member">Михаил Ермаков</h3>
+                    <p class="team-occupation" lang="en">UI Designer</p>
                 </li>
             </ul>
 
@@ -121,12 +121,12 @@
 
     <!---Footer-->
 
-    <footer>
-        <a href="WebStudio" class="brandmark">WebStudio</a>
+    <footer class="basement">
+        <a href="WebStudio" class="brandmark"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-            <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a>
+            <div><span class="address">г. Киев, пр-т Леси Украинки, 26</span></div>
+            <div><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+            <div><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></div>
         </address>
     </footer>
 
