--- a/portfolio.html
+++ b/portfolio.html
@@ -12,102 +12,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio 2.1</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <!--Верхняя линия-->
     <header>
-        <nav class="site-nav">
-            <a class="link  logo" href="./index.html">WebStudio</a>
-            <ul>
+        <nav>
+            <a class="link logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+            <ul class="menu-nav">
                 <li>
-                    <a class="link nav" href="Студия">Студия</a>
+                    <a class="link" href="./index.html">Студия</a>
                 </li>
                 <li>
-                    <a class="link nav current" href="./portfolio.html">Портфолио</a>
+                    <a class="link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li>
-                    <a class="link nav" href="Контакты">Контакты</a>
+                    <a class="link" href="Контакты">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
+        <ul class="menu-nav">
             <li>
-                <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
+                <a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a>
+                <a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
+    <!--Шапка-->
 
 <main>
 <!--Filters-->
-<h1>Portfolio</h1>
+<h1 class="portfolio-heading">Portfolio</h1>
 <section>
     <ul>
         <li>
-            <button class="link" type="button">Все</button>
+            <button class="button-main" type="button">Все</button>
         </li>
         <li>
-            <button class="link" type="button">Веб-сайты</button>
+            <button class="button-menu" type="button">Веб-сайты</button>
         </li>
         <li>
-            <button class="link" type="button">Приложения</button>
+            <button class="button-menu" type="button">Приложения</button>
         </li>
         <li>
-            <button class="link" type="button">Дизайн</button>
+            <button class="button-menu" type="button">Дизайн</button>
         </li> 
         <li>
-            <button class="link" type="button">Маркетинг</button>
+            <button class="button-menu" type="button">Маркетинг</button>
         </li>
     </ul>
 
     <ul class="models">
         <li>
             <img width="370" height="294" src="./img/Portfolio/1.jpg" alt="Laptop">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="models-heading">Технокряк</h2>
+            <p class="models-def">Веб-сайт</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/2.jpg" alt="Laptop">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="models-heading">Постер New Orlean vs Golden Star</h2>
+            <p class="models-def">Дизайн</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/3.jpg" alt="Laptop">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="models-heading">Ресторан Seafood</h2>
+            <p class="models-def">Приложение</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/4.jpg" alt="Laptop">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="models-heading">Проект Prime</h2>
+            <p class="models-def">Маркетинг</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/5.jpg" alt="Laptop">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="models-heading">Проект Boxes</h2>
+            <p class="models-def">Приложение</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/6.jpg" alt="Laptop">
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="models-heading" lang="en">Inspiration has no Borders</h2>
+            <p class="models-def">Веб-сайт</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/7.jpg" alt="Laptop">
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="models-heading">Издание Limited Edition</h2>
+            <p class="models-def">Дизайн</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/8.jpg" alt="Laptop">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="models-heading">Проект LAB</h2>
+            <p class="models-def">Маркетинг</p>
         </li>
         <li>
             <img width="370" height="294" src="./img/Portfolio/9.jpg" alt="Laptop">
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="models-heading" lang="en">Growing Business</h2>
+            <p class="models-def">Приложение</p>
         </li>
     </ul>
 </section>
@@ -115,12 +119,12 @@
 
     <!---Footer-->
     
-    <footer>
-        <a href="WebStudio" class="brandmark">WebStudio</a>
+    <footer class="basement">
+        <a href="WebStudio" class="brandmark"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-            <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a>
+            <div><span class="address">г. Киев, пр-т Леси Украинки, 26</span></div>
+            <div><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+            <div><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></div>
         </address>
     </footer>
     
