--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                     <a class="link" href="./index.html">Студия</a>
                 </li>
                 <li>
-                    <a class="link" href="./portfolio.html">Портфолио</a>
+                    <a class="link current " href="./portfolio.html">Портфолио</a>
                 </li>
                 <li>
                     <a class="link" href="Контакты">Контакты</a>
@@ -69,49 +69,67 @@
 
     <ul class="models">
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/1.jpg" alt="Laptop">
             <h2 class="models-heading">Технокряк</h2>
             <p class="models-def">Веб-сайт</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/2.jpg" alt="Laptop">
             <h2 class="models-heading">Постер New Orlean vs Golden Star</h2>
             <p class="models-def">Дизайн</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/3.jpg" alt="Laptop">
             <h2 class="models-heading">Ресторан Seafood</h2>
             <p class="models-def">Приложение</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/4.jpg" alt="Laptop">
             <h2 class="models-heading">Проект Prime</h2>
             <p class="models-def">Маркетинг</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/5.jpg" alt="Laptop">
             <h2 class="models-heading">Проект Boxes</h2>
             <p class="models-def">Приложение</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/6.jpg" alt="Laptop">
             <h2 class="models-heading" lang="en">Inspiration has no Borders</h2>
             <p class="models-def">Веб-сайт</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/7.jpg" alt="Laptop">
             <h2 class="models-heading">Издание Limited Edition</h2>
             <p class="models-def">Дизайн</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/8.jpg" alt="Laptop">
             <h2 class="models-heading">Проект LAB</h2>
             <p class="models-def">Маркетинг</p>
+            </a>
         </li>
         <li>
+            <a href="">
             <img width="370" height="294" src="./img/Portfolio/9.jpg" alt="Laptop">
             <h2 class="models-heading" lang="en">Growing Business</h2>
             <p class="models-def">Приложение</p>
+            </a>
         </li>
     </ul>
 </section>
