--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="link logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
             <ul class="menu-nav">
                 <li>
-                    <a class="link" href="./index.html">Студия</a>
+                    <a class="link current" href="./index.html">Студия</a>
                 </li>
                 <li>
                     <a class="link" href="./portfolio.html">Портфолио</a>
@@ -46,7 +46,7 @@
 
         <section class="main-section">
             <h1 class="heading">Эффективные решения<br>для вашего бизнеса</h1>
-            <button class="button link" type="button">Заказать услугу</button>
+            <button class="button" type="button">Заказать услугу</button>
         </section>
 
         <!--Особенности-->
